--- a/client-end/package.json
+++ b/client-end/package.json
@@ -23,6 +23,7 @@
     "reactstrap": "^8.10.0",
     "rebass": "^4.0.7",
     "styled-components": "^4.4.1",
+    "tachyons": "^4.12.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
